--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,9 +12,12 @@
     "@expo-google-fonts/roboto": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
+    "@types/country-list": "^2.1.1",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "axios": "^1.2.0",
+    "country-list": "^2.2.0",
+    "dayjs": "^1.11.6",
     "expo": "~47.0.3",
     "expo-auth-session": "~3.7.2",
     "expo-font": "~11.0.1",
